[package]
name = "opentok-server"
version = "0.1.1"
edition = "2021"
description = "The OpenTok Server Rust SDK"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>", "Philippe Normand <philn@igalia.com>"]
repository = "https://github.com/opentok-rust/opentok-server-rs"

[dependencies]
base64 = "0.13.0"
futures = "0.3.17"
jsonwebtoken = "7.2.0"
hmac-sha1 = "0.1.3"
rand = "0.8.4"
rustc-serialize = "0.3.24"
serde = "1.0.130"
serde_json = "1.0.68"
surf = "2.3.1"
thiserror = "1.0.25"

[dev-dependencies]
opentok = { git = "https://github.com/opentok-rust/opentok-rs.git", branch = "main", features = ["gstreamer-utils"] }
